examples/errors/parsing/factorial.cn
fun factorial : Int -> Int [impure] = {
  n ->
  let acc = New[Int] 1;
  let cur = New[Int] n;
  iter (i = Get[Int] cur) {
    if Eq[Int] (i, 0) then
      (let r = Get[Int] acc;
       let u = Del[Int] acc;
       let v = Del[Int] cur;
       Done r : Step(Int, Int))
    else
      (let a = Get[Int] acc;
       let u = Set[Int] (acc, a * i);
       let v = Set[Int] (cur, i - 1);
       let j = Get[Int] cur;
       Next j : Step(Int, Int))
  }
}

main : () [impure] =
  let r = factorial 5;
  ()
